[revise/user.js&swagger.yaml] 修改資料回傳格式 增加Status、time、data
